crates/phynix-parse/tests/stmt/snapshots/tests__stmt__misc__break_level.snap
---
source: crates/phynix-parse/tests/stmt/misc.rs
assertion_line: 25
expression: script
---
items:
  - Break:
      level:
        IntLiteral:
          value: 2
