crates/phynix-parse/tests/stmt/snapshots/tests__stmt__misc__break_parenthesized_level.snap
---
source: crates/phynix-parse/tests/stmt/misc.rs
expression: script
---
items:
  - Break:
      level:
        Parenthesized:
          inner:
            IntLiteral:
              value: 2
