crates/phynix-parse/tests/stmt/snapshots/tests__stmt__misc__break_simple.snap
---
source: crates/phynix-parse/tests/stmt/misc.rs
assertion_line: 20
expression: script
---
items:
  - Break:
      level: ~
