crates/phynix-parse/tests/stmt/snapshots/tests__stmt__misc__continue_parenthesized_level.snap
---
source: crates/phynix-parse/tests/stmt/misc.rs
expression: script
---
items:
  - Continue:
      level:
        Parenthesized:
          inner:
            IntLiteral:
              value: 2
