crates/phynix-parse/tests/stmt/snapshots/tests__stmt__misc__continue_simple.snap
---
source: crates/phynix-parse/tests/stmt/misc.rs
assertion_line: 30
expression: script
---
items:
  - Continue:
      level: ~
