crates/phynix-parse/tests/stmt/snapshots/tests__stmt__misc__global_simple.snap
---
source: crates/phynix-parse/tests/stmt/misc.rs
assertion_line: 35
expression: script
---
items:
  - Global: {}
