crates/phynix-parse/tests/stmt/snapshots/tests__stmt__misc__return_simple.snap
---
source: crates/phynix-parse/tests/stmt/misc.rs
assertion_line: 5
expression: script
---
items:
  - Return:
      expr: ~
