crates/phynix-parse/tests/stmt/snapshots/tests__stmt__misc__return_value.snap
---
source: crates/phynix-parse/tests/stmt/misc.rs
assertion_line: 10
expression: script
---
items:
  - Return:
      expr:
        IntLiteral:
          value: 1
