crates/phynix-parse/tests/stmt/snapshots/tests__stmt__misc__static_call_stmt.snap
---
source: crates/phynix-parse/tests/stmt/misc.rs
expression: script
---
items:
  - ExprStmt:
      expr:
        StaticCall:
          class:
            Qualified:
              absolute: false
              parts:
                - {}
          method: {}
          args: []
