crates/phynix-parse/tests/stmt/snapshots/tests__stmt__misc__static_var_simple.snap
---
source: crates/phynix-parse/tests/stmt/misc.rs
assertion_line: 40
expression: script
---
items:
  - Noop: {}
