crates/phynix-parse/tests/stmt/snapshots/tests__stmt__misc__throw_simple.snap
---
source: crates/phynix-parse/tests/stmt/misc.rs
assertion_line: 15
expression: script
---
items:
  - Throw:
      expr:
        VarRef:
          name: {}
